@@ -21,6 +21,7 @@
 	* lib/tcbfuncs.c: move_dir() and shadowtcb_move() need a non NULL
 	stored_tcb_user.
 	* lib/tcbfuncs.c: Avoid implicit int to mode_t conversion.
+	* lib/tcbfuncs.c: Added brackets and parenthesis.
 
 2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>
 
